--- a/FileSys/Config.json
+++ b/FileSys/Config.json
@@ -2,7 +2,11 @@
     "PATH": "H:\\Onedrive\\inportant_docs\\amoungUsJs",
     "BasePrompt": "> ",
     "Verbose":false,
-    "Completions": ".help .error .exit .quit .q .map .tasks .CompTasks .NotCompTasks",
+    "Completions": ".help .error .exit .quit .q .map .tasks .CompTasks .NotCompTasks .updateMap .randMap",
     "PlayerIcon": "ඞ",
-    "VentIcon": "▢"
+    "VentIcon": "▢",
+    "Commands": [
+        "help",
+        "map"
+    ]
 }
