--- a/FileSys/Config.json
+++ b/FileSys/Config.json
@@ -1,13 +1,21 @@
 {
     "PATH": "H:\\Onedrive\\inportant_docs\\amoungUsJs",
     "BasePrompt": "> ",
-    "Verbose":false,
-    "Completions": ".help .error .exit .quit .q .map .tasks .CompTasks .NotCompTasks .updateMap .randMap .home",
+    "Verbose":true,
+    "Completions": ".help .error .exit .quit .q .map .tasks .CompTasks .NotCompTasks .updateMap .randMap .home .absoluteMove .resetMap",
     "PlayerIcon": "ඞ",
     "VentIcon": "▢",
     "WallIcon": "█",
+    "ReplaceIcon": "©",
     "Commands": [
         "help",
         "map"
-    ]
+    ],
+    "MapLineLength": 170,
+    "SaveMapTruePos":{
+        "Home": 1781
+    },
+    "SaveMapCordPair": {
+        "Home": {"x":72,"y":10}
+    }
 }
