--- a/FileSys/Config.json
+++ b/FileSys/Config.json
@@ -1,13 +1,17 @@
 {
     "PATH": "H:\\Onedrive\\inportant_docs\\amoungUsJs",
     "BasePrompt": "> ",
-    "Verbose":true,
+    "Verbose":false,
     "Completions": ".help .error .exit .quit .q .map .tasks .CompTasks .NotCompTasks .updateMap .randMap .home .resetMap .deColorMap ",
     "PlayerIcon": "ඞ",
     "VentIcon": "▢",
     "WallIcon": "█",
     "AirIcon": "░",
     "ReplaceIcon": "©",
+    "delay": 1000,
+    "MovesPerTurn": 5,
+    "VisionTiles": 3,
+    "WallCollisionMsgArr": ["YOU CAN'T MOVE", "THROUGH WALLS,", "DUMMY"],
     "Commands": [
         "help",
         "map"
