--- a/FileSys/Config.json
+++ b/FileSys/Config.json
@@ -2,12 +2,13 @@
     "PATH": "H:\\Onedrive\\inportant_docs\\amoungUsJs",
     "BasePrompt": "> ",
     "Verbose":false,
-    "Completions": ".help .error .exit .quit .q .map .tasks .CompTasks .NotCompTasks .updateMap .randMap .home .resetMap .deColorMap .changeArrowMoveAmount",
+    "Completions": ".help .error .exit .quit .q .map .tasks .CompTasks .NotCompTasks .updateMap .randMap .home .resetMap .deColorMap .changeArrowMoveAmount .death",
     "PlayerIcon": "ඞ",
     "VentIcon": "▢",
     "WallIcon": "█",
     "AirIcon": "░",
     "ReplaceIcon": "©",
+    "DeadIcon": "d",
     "replaceArr": [
         "ô",
         "Æ",
