forgot to commit in a long time

--- a/FileSys/Config.json
+++ b/FileSys/Config.json
@@ -2,13 +2,24 @@
     "PATH": "H:\\Onedrive\\inportant_docs\\amoungUsJs",
     "BasePrompt": "> ",
     "Verbose":false,
-    "Completions": ".help .error .exit .quit .q .map .tasks .CompTasks .NotCompTasks .updateMap .randMap .home .resetMap .deColorMap .changeArrowMoveAmount .death",
+    "Completions": ".help .error .exit .quit .stopEme .q localhost .map .tasks .CompTasks .NotCompTasks .updateMap .randMap .home .resetMap .deColorMap .changeArrowMoveAmount .death .pause .sendMsg .longMsg .shortMsg",
     "PlayerIcon": "ඞ",
     "VentIcon": "▢",
+    "KillRange": 5,
+    "killCooldown": 25,
     "WallIcon": "█",
     "AirIcon": "░",
     "ReplaceIcon": "©",
+    "repeteLength": 5,
     "DeadIcon": "d",
+    "Traitors": 1,
+    "snakeGameGoal": 15,
+    "emergencyMeetingTime": 10,
+    "emergencyCoolDown": 10,
+    "emergencyMeetingsPerGamePerPlayer": 10,
+    "infiniteColors": false,
+    "infinitePlayers": false,
+    "colors":["#FB00FF","#FB92C1","#00931A","#335428","#C5E57C","#FFE300","#6D6100","#C47D1D","#FFF076","#9476FF","#9A7500", "#008ECC", "#00CCBF", "#867B00","_COMMENT: this is not used"],
     "replaceArr": [
         "ô",
         "Æ",
@@ -33,6 +44,7 @@
         "á",
         "í"
     ],
+    
     "delay": 1000,
     "MovesPerTurn": 5,
     "VisionTiles": 3,
