--- a/FileSys/Config.json
+++ b/FileSys/Config.json
@@ -2,7 +2,7 @@
     "PATH": "H:\\Onedrive\\inportant_docs\\amoungUsJs",
     "BasePrompt": "> ",
     "Verbose":false,
-    "Completions": ".help .error .exit .quit .stopEme .log .q localhost .map .tasks .CompTasks .NotCompTasks .updateMap .randMap .home .resetMap .deColorMap .changeArrowMoveAmount .death .pause .sendMsg .longMsg .shortMsg",
+    "Completions": ".help .error .wire .gogoGgo .exit .quit .stopEme .log .q localhost .map .tasks .CompTasks .NotCompTasks .updateMap .randMap .home .resetMap .deColorMap .changeArrowMoveAmount .death .pause .sendMsg .longMsg .shortMsg",
     "PlayerIcon": "ඞ",
     "VentIcon": "▢",
     "KillRange": 5,
