bug fix o2 bug fixed added o2 sabatoage added  text to lights sabotage

--- a/FileSys/Config.json
+++ b/FileSys/Config.json
@@ -15,7 +15,8 @@
     "Traitors": 1,
     "snakeGameGoal": 15,
     "emergencyMeetingTime": 1000,
-    "timeBeforeReactorBlows": 5,
+    "timeUntilO2Depletes": 40,
+    "timeBeforeReactorBlows": 40,
     "emergencyCoolDown": 10,
     "emergencyMeetingsPerGamePerPlayer": 10,
     "infiniteColors": false,
