added cooldowns to sabatage and vents

--- a/FileSys/Config.json
+++ b/FileSys/Config.json
@@ -7,6 +7,8 @@
     "VentIcon": "▢",
     "KillRange": 5,
     "killCooldown": 25,
+    "ventCooldown": 25,
+    "sabotageCooldown": 25,
     "WallIcon": "█",
     "AirIcon": "░",
     "ReplaceIcon": "©",
@@ -14,7 +16,7 @@
     "DeadIcon": "d",
     "Traitors": 1,
     "snakeGameGoal": 15,
-    "emergencyMeetingTime": 1000,
+    "emergencyMeetingTime": 50,
     "timeUntilO2Depletes": 40,
     "timeBeforeReactorBlows": 40,
     "emergencyCoolDown": 10,
