--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "among_js_server",
+  "name": "among_js",
   "version": "2.0.1",
   "description": "javascript, terminal based graphics, welcome to hell",
-  "main": "Server.js",
+  "main": "Init.js",
   "bin": "bin.js",
   "dependencies": {
+    "audio-loader": "^1.0.3",
+    "audio-play": "^2.2.1",
     "chalk": "^4.1.0",
     "clear": "^0.1.0",
     "colors": "^1.4.0",
+    "play": "^0.5.0",
+    "play-sound": "^1.1.3",
     "prompt-sync": "^4.2.0",
     "public-ip": "^4.0.2",
+    "sound-play": "^1.1.0",
+    "speaker": "^0.5.2",
     "strip-ansi": "^6.0.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {},
   "repository": {
     "type": "git",
