--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "among_js",
+  "name": "among_js_server",
   "version": "2.0.1",
   "description": "javascript, terminal based graphics, welcome to hell",
-  "main": "Init.js",
+  "main": "Server.js",
   "bin": "bin.js",
   "dependencies": {
     "audio-loader": "^1.0.3",
